<resources>
    <string name="app_name">AndroidTrainning</string>
    <string name="action_settings">Settings</string>
    <string name="title_login">Login</string>
    <string name="title_email">Email</string>
    <string name="title_password">Password</string>
    <string name="login_failed">* Username or password is incorrect</string>
    <string name="login_create_account">Create new account</string>
    <string name="title_ok">OK</string>
    <string name="title_retype_password">Retype password</string>
    <string name="title_full_name">Full name</string>
    <string name="title_avatar">Avatar</string>
    <string name="learned_format">Learned %d words</string>
    <string name="title_old_password">Old password</string>
    <string name="title_new_password">New password</string>

    <string-array name="arr_categories">
        <item>All</item>
        <item>Basic</item>
        <item>Advance</item>
        <item>Expert</item>
    </string-array>
    <string-array name="arr_learn">
        <item>All</item>
        <item>Learned</item>
        <item>Not learn</item>
    </string-array>
</resources>
