<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include layout="@layout/action_bar" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:padding="@dimen/activity_horizontal_margin">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:drawableLeft="@mipmap/ic_email"
                android:drawablePadding="@dimen/drawable_padding"
                android:text="@string/title_email"
                android:textColor="@android:color/holo_blue_dark"
                android:textSize="@dimen/label_text_size" />

            <EditText
                android:id="@+id/update_profile_email_et"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/activity_horizontal_margin"
                android:clickable="false"
                android:cursorVisible="false"
                android:focusable="false"
                android:focusableInTouchMode="false"
                android:hint="@string/title_email"
                android:inputType="textEmailAddress" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/activity_horizontal_margin"
                android:drawableLeft="@mipmap/ic_lock"
                android:drawablePadding="@dimen/drawable_padding"
                android:text="@string/title_old_password"
                android:textColor="@android:color/holo_blue_dark"
                android:textSize="@dimen/label_text_size" />

            <EditText
                android:id="@+id/update_profile_old_password_et"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/activity_horizontal_margin"
                android:hint="@string/title_old_password"
                android:inputType="textPassword" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/activity_horizontal_margin"
                android:drawableLeft="@mipmap/ic_lock"
                android:drawablePadding="@dimen/drawable_padding"
                android:text="@string/title_new_password"
                android:textColor="@android:color/holo_blue_dark"
                android:textSize="@dimen/label_text_size" />

            <EditText
                android:id="@+id/update_profile_new_password_et"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/activity_horizontal_margin"
                android:hint="@string/title_new_password"
                android:inputType="textPassword" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/activity_horizontal_margin"
                android:drawableLeft="@mipmap/ic_lock"
                android:drawablePadding="@dimen/drawable_padding"
                android:text="@string/title_retype_password"
                android:textColor="@android:color/holo_blue_dark"
                android:textSize="@dimen/label_text_size" />

            <EditText
                android:id="@+id/update_profile_retype_password_et"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/activity_horizontal_margin"
                android:hint="@string/title_password"
                android:inputType="textPassword" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/activity_horizontal_margin"
                android:drawableLeft="@mipmap/ic_full_name"
                android:drawablePadding="@dimen/drawable_padding"
                android:text="@string/title_full_name"
                android:textColor="@android:color/holo_blue_dark"
                android:textSize="@dimen/label_text_size" />

            <EditText
                android:id="@+id/update_profile_full_name_et"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/activity_horizontal_margin"
                android:hint="@string/title_full_name" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_marginTop="@dimen/activity_horizontal_margin"
                    android:drawableLeft="@mipmap/ic_human"
                    android:drawablePadding="@dimen/drawable_padding"
                    android:text="@string/title_avatar"
                    android:textColor="@android:color/holo_blue_dark"
                    android:textSize="@dimen/label_text_size" />

                <ImageView
                    android:id="@+id/update_profile_avatar"
                    android:clickable="true"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:src="@mipmap/avatar_default" />
            </RelativeLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>