<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include layout="@layout/action_bar" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="@dimen/activity_horizontal_margin">

            <ImageView
                android:id="@+id/home_avatar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@mipmap/avatar_default" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/home_full_name_tv"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableLeft="@mipmap/ic_full_name"
                    android:drawablePadding="@dimen/drawable_padding"
                    android:text="@string/title_full_name" />

                <TextView
                    android:id="@+id/home_email_tv"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/normal_margin"
                    android:drawableLeft="@mipmap/ic_email"
                    android:drawablePadding="@dimen/drawable_padding"
                    android:text="@string/title_email" />

                <TextView
                    android:id="@+id/home_words_learned_tv"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/normal_margin"
                    android:drawableLeft="@mipmap/ic_check_list"
                    android:drawablePadding="@dimen/drawable_padding"
                    android:text="@string/learned_format" />
            </LinearLayout>

            <ImageView
                android:id="@+id/home_edit_bt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:src="@mipmap/ic_edit" />
        </LinearLayout>

        <!--<android.support.v7.widget.RecyclerView-->
            <!--android:id="@+id/home_activities_rv"-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="0dp"-->
            <!--android:layout_weight="1" />-->
    </LinearLayout>

</LinearLayout>